# rag

ingester/: .env.example  pyproject.toml
ingester/src/ingester/: __init__.py  __main__.py  config.py  confluence_crawler.py  confluence_loader.py  content_parser.py  logging.py  main.py  splitter.py  vector_storage.py
mcp-search/: .env.example  .gitignore  pyproject.toml
mcp-search/src/mcp_search/: __init__.py  auth.py  config.py  logging.py  server.py  vector_store.py
mcp-search/src/mcp_search/tools/: __init__.py  search.py
