[project]
name = "mcp-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Umidjon Ustabaev", email = "umidjon.ustabaev@softswiss.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mcp-search = "mcp_search:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
